--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -33,7 +33,8 @@
 
     .profile-hdr-info-user,
     .profile-hdr-info-location,
-    .profile-hdr-info-link
+    .profile-hdr-info-link,
+    .profile-hdr-info-about
       display: block
       width: auto
       padding: 0 20px 0 22px
@@ -42,6 +43,10 @@
       padding: 3px 15px 3px 30px
       background-position: 7px center
       margin: 0 0 2px
+
+    .profile-hdr-info-about
+      padding: 15px
+      margin: 0 0 12px 0
 
     .profile-hdr-btn,
     .profile-hdr-friend,
@@ -302,6 +307,30 @@ article.profile
     top: 27px
     right: 0
     background: image-url("friend-request-sprite.png") no-repeat center -128px #D30000
+
+
+// !Blank slate pages
+
+#main
+
+  .slate-activity,
+  .slate-bookmarks,
+  .slate-highlights,
+  .slate-notes,
+  .slate-badges
+    padding: 120px 40px 20px
+    border-radius: 0
+    margin: 0
+
+    h2
+      font-size: 2.5em
+      margin: 0 0 20px 0
+    p
+      text-align: center
+      padding: 0
+
+  .slate-activity
+    padding: 30px 40px 20px
 
 
 // !Notifications
