--- a/app/views/comments/_sidebar_form.html.haml
+++ b/app/views/comments/_sidebar_form.html.haml
@@ -1,6 +1,6 @@
 .widget.social-sidebar
   %h3.hd
-    Post a comment
+    = t("comments.post comment")
 
   = form_tag(comments_url, method: "post") do
     = hidden_field_tag "comment[moment_id]", moment.id
@@ -8,5 +8,4 @@
     .social-sidebar-input
       = text_area_tag "comment[content]", nil
       %button.action_button_green
-        Post
-          
+        = t("comments.form.save button")
