--- a/app/views/moments/_daily_verse.html.haml
+++ b/app/views/moments/_daily_verse.html.haml
@@ -11,7 +11,7 @@
       %span.moment-time
         = verse_of_today.date.to_s(:long)
       .moment-vod-title
-        Verse of the day
+        = t("moments.vod.title")
       %p.moment-vod-verse
         = verse_of_today.content
 
