--- a/app/views/notes/edit.html.haml
+++ b/app/views/notes/edit.html.haml
@@ -2,7 +2,7 @@
   = render partial: 'shared/back_button'
 
 - content_for :title do
-  = t('bookmarks.edit note')
+  = t('notes.edit note')
 
 %article
   %h1= t("notes.edit note")
