--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -1,8 +1,6 @@
 - @sidebar = true
 
 %article.notifications
-  %h1= t('notifications')
-  / %h2.activity-date
-  /  Sent Today
-
+  %h1
+    = t('notifications.title')
   = render partial: "notifications/list", locals: {notifications: @notifications}
