--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -15,9 +15,9 @@
 
     :ruby
       settings = {
-        "moments"       => "Moments info text (to be localized)",
-        "comments"      => "Comments info text (to be localized)",
-        "friendships"   => "Friendships info text (to be localized)",
+        "moments"       => t('users.notifications.moments'),
+        "comments"      => t('users.notifications.comments'),
+        "friendships"   => t('users.notifications.friendships'),
         "reading_plans" => t('users.notifications.reading_plans'),
         "badges"        => t('users.notifications.badges'),
         "newsletter"    => t('users.notifications.newsletter'),
