--- a/app/views/moments/cta/_profile.html.haml
+++ b/app/views/moments/cta/_profile.html.haml
@@ -1,5 +1,5 @@
 .moment
   .moment-psa
     %p.moment-psa-text
-      Help your friends find you.
-    = link_to( "Update your profile", edit_user_path(current_auth.username), class: "moment-psa-btn action_button_blue")
+      = t("moments.cta.profile update text")
+    = link_to( t("moments.cta.profile update button"), edit_user_path(current_auth.username), class: "moment-psa-btn action_button_blue")
