--- a/app/views/moments/cta/_sharing.html.haml
+++ b/app/views/moments/cta/_sharing.html.haml
@@ -1,7 +1,7 @@
 .moment
   .moment-psa
     %p.moment-psa-text
-      Share verses with social networks.
+      = t("moments.cta.sharing text")
     = image_tag "social-share-icons.png", class: "psa-social-img"
     %br
-    <a href="#" class="moment-psa-btn action_button_blue">Enable sharing</a>
+    = link_to(t("moments.cta.sharing button"), "#", class: "moment-psa-btn action_button_blue")
