--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -3,14 +3,14 @@
   # Required
   # - note : an instance of Note
 
-= form_for note, as: :note, url: note.id ? note_path(note.id) : notes_path, :html => {class: "full_page_form"} do |f|
+= form_for note, as: :note, url: note.id ? note_path(note.id) : notes_path, html: {class: "full_page_form"} do |f|
   = render partial: "shared/form_errors", locals: {errors: note.errors}
 
   %p
-    = f.label :title, t("notes.title field")
+    = f.label :title, t("notes.form.title field")
     = f.text_field :title, {style: "width: 100%;"}
   %div
-    = f.label :content, t("notes.content field")
+    = f.label :content, t("notes.form.content field")
     %div{style: "margin: 20px 0;"}
       = f.text_area :content, size: "30x10"
 
@@ -18,12 +18,12 @@
   - # Causes an error otherwise when sending empty note[references]/note[version_id] params
   - unless note.reference_list.blank?
     %p
-      = f.label :reference, t("notes.reference field")
+      = f.label :reference, t("notes.form.reference field")
       = note.reference_list.map{|r| link_to(r, bible_path(r))}.join(", ").html_safe
       = hidden_field_tag "note[references]", note.reference_list.to_flat_usfm
       = hidden_field_tag "note[version_id]", note.version_id
   %p
-    = f.label :user_status, t("notes.status field")
+    = f.label :user_status, t("notes.form.status field")
     = f.select :user_status, options_for_select(object_status, note.user_status)
   %p
-    = f.submit t("notes.save"), {class: "action_button_green float_right"}
+    = f.submit t("notes.form.save button"), {class: "action_button_green float_right"}
