--- a/app/views/users/highlights.html.haml
+++ b/app/views/users/highlights.html.haml
@@ -14,9 +14,9 @@
   .profile-blank-slate.slate-highlights
     - if current_user_is? @user
       %h2
-        Highlight meaningful verses
+        = t("highlights.blank slate.heading")
       %p
-        While reading the Bible, select a verse and highlight it. Return here to view, edit, or delete your highlight.
+        = t("highlights.blank slate.description")
     - else
       %h2
-        This person has no highlights
+        = t("highlights.none user", username: @user.name)
