Cleanup minor issues after quick walkthrough.

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -150,6 +150,12 @@ article.social-requests ul
         p
           line-height: 0px
           margin: -8px 0px 0px
+          float: left
+          margin-top: 20px
+
+          a
+            display: block
+            margin-bottom: 10px
 
         .timestamp
           color: #aaa
@@ -210,8 +216,12 @@ article.social-requests ul
       border: 3px solid #ddd
 
     p
-      line-height: 26px
-      margin-bottom: 0px
+
+      line-height: 1.5em
+      margin: 5px 0 0 0
+
+      a
+        display: block
 
     .timestamp
       color: #aaa
