--- a/app/views/users/highlights.html.haml
+++ b/app/views/users/highlights.html.haml
@@ -1,6 +1,6 @@
 - @sidebar = false
 -# needs i18n keys added
-- @title = @me ? "My Highlights" : (@user.name || @user.username) << "'s Highlights"
+- @title = @me ? "My Highlights" : (@user.name || @user.username)
 - content_for :title do
   = @title
 
