Turned on retina images for header icons

--- a/app/assets/stylesheets/_notifications.sass
+++ b/app/assets/stylesheets/_notifications.sass
@@ -12,7 +12,7 @@
 // ------ Edit notifications page
 .notification-settings-group
   margin-bottom: 0
-  
+
   .settings-group-item
     margin-bottom: 2em
 
@@ -37,8 +37,8 @@
     text-align: center
 
 article.social-requests ul
-  margin-bottom: 0    
-    
+  margin-bottom: 0
+
 
 
 // `Header > Friend Requests & Notifications
@@ -52,7 +52,9 @@ article.social-requests ul
   width: 40px
   height: 40px
   margin: 5px 0px 5px 25px
-  text-indent: -9999px
+  text-indent: 100%
+  overflow: hidden
+  wihte-space: nowrap
 
 #header .friend-requests-btn
   background-position: 0px 9px
@@ -204,7 +206,7 @@ article.social-requests ul
   .item-content
     padding-top: 20px
     float: left
-    min-width: 350px 
+    min-width: 350px
 
     img
       height: 48px
@@ -257,4 +259,3 @@ article.social-requests ul
 
     .action_button_grey
       margin-right: 0px
-  
