--- a/app/assets/stylesheets/mobile/_notifications.sass
+++ b/app/assets/stylesheets/mobile/_notifications.sass
@@ -6,7 +6,9 @@
   width: 40px
   height: 40px
   margin: 3px 0 0 15px
-  text-indent: -9999px
+  text-indent: 100%
+  overflow: hidden
+  white-space: nowrap
   position: absolute
 
 #header .friend-requests-btn.home-url,
@@ -34,18 +36,18 @@
     display: none
     opacity: 0
 
-    .arrow  
+    .arrow
       left: 56px
 
     .list-item
-      height: 100px      
+      height: 100px
 
   .header-popover.notifications
-    left: 3px    
+    left: 3px
     padding: 0
 
     .arrow
-      left: 97px   
+      left: 97px
 
 .notify-item
   min-height: 100px
